# starter-python-microservice

./: README.md  Tiltfile
k8s/: postgress.yaml  product-service.yaml  user-service.yaml
product-service/: Dockerfile  main.py  pyproject.toml
product-service/app/: app.py  config.py  router.py
product-service/app/db/: client.py
product-service/app/models/: base.py  product.py
product-service/app/schemas/: base.py  product.py
product-service/scripts/: start.sh
user-service/: .dockerignore  .gitignore  main.py  pyproject.toml
