[tool.poetry]
name = "user-service"
version = "0.0.1"
description = "User Service"
authors = ["cfowlerdev <cfowlerdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
